# grats

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.sh  deploy.sh  run_dev.sh
src/: lib.rs  time.rs
src/components/: app.rs  config.rs  daily.rs  entry_buttons_view.rs  history_view.rs  mod.rs  nav.rs
src/model/: entry_button.rs  history.rs  mod.rs
src/repo/: mod.rs
static/: index.html  styles.css
