[package]
authors = ["Terkwood <38859656+Terkwood@users.noreply.github.com>"]
description = "Make a gratitude list using browser local storage"
edition = "2018"
license = "MIT"
name = "grats"
repository = "https://github.com/Terkwood/grats"
version = "0.3.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = "0.4.15"
group_by = {git = "https://github.com/Terkwood/group_by.rs", tag = "v0.1.0"}
js-sys = "0.3.45"
serde = "1.0.116"
serde_derive = "1.0.116"
serde_json = "1.0.57"
wasm-bindgen = "0.2.68"
web-sys = "0.3.45"
yew = "0.17.3"
yew-export-button = {git = "https://github.com/Terkwood/yew-export-button", tag = "v0.1.0"}
