[package]
authors = ["Terkwood <38859656+Terkwood@users.noreply.github.com>"]
description = "Make a gratitude list using browser local storage"
edition = "2018"
license = "MIT"
name = "grats"
repository = "https://github.com/Terkwood/grats"
version = "1.0.4"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = "0.4.31"
gloo-storage = "0.2.2"
group_by = {git = "https://github.com/Terkwood/group_by.rs", tag = "v0.1.0"}
js-sys = "0.3.66"
serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = "1.0.108"
wasm-bindgen = "0.2.89"
web-sys = "0.3.66"
yew = "0.19.3"
yew-export-button = {git = "https://github.com/Terkwood/yew-export-button", tag="v1.0.0"}
